# live-entity

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: crates.yaml
fullstack-entity-derive/: Cargo.toml
fullstack-entity-derive/src/: entity.rs  lib.rs  mongo.rs  storage_wrapper.rs  updatable.rs
live-entity-derive/: Cargo.toml  README.md
live-entity-derive/src/: entity.rs  updatable.rs  util.rs
src/: entity.rs  entity_storage.rs  event.rs  lib.rs  singleton_entity.rs  store_of.rs  updatable.rs
src/backend/: entity_storage.rs  mod.rs
src/backend/mongo/: mod.rs  mongo_entity_storage.rs
src/mongo/: mongo_entity_storage.rs
src/mongodb/: mod.rs  mongodb_store.rs
src/store/: in_mem.rs  mod.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs  storage_test.rs
tests/: derive_entity_test.rs  derive_updatable_test.rs  in_mem_store_tests.rs  mongo_connector_test.rs
