[package]
name = "fullstack-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mongo = ["dep:mongodb", "fullstack-entity-derive/mongo"]

[dependencies]
fullstack-entity-derive = { path = "fullstack-entity-derive" }
serde = { version = "1.0.188", features = ["derive"] }
async-trait = { version = "0.1.73" }
futures-util = { version = "0.3.28" }
tokio = { version = "1.32.0", features = ["sync"] }
mongodb = { version = "2.6.1", optional = true }