[package]
name = "fullstack-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mongodb = ["dep:mongodb"]
in-mem = ["dep:typemap_rev"]
default = ["in-mem"]

[dependencies]
fullstack-entity-derive = { path = "fullstack-entity-derive" }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["sync", "macros"] }
async-trait = { version = "0.1.73" }
futures-util = { version = "0.3.28" }
mongodb = { version = "2.6.1", optional = true }
typemap_rev = { version = "0.3.0", optional = true }

[dev-dependencies]
test-utils = { path = "test-utils" }