[package]
name = "live-entity"
description = "A framework for storing entities and watching them for updates."
version = "0.0.7"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tradeJmark/live-entity"
repository = "https://github.com/tradeJmark/live-entity"
readme = "README.md"
exclude = [
  ".idea",
  ".vscode"
]

[features]
mongodb = ["dep:mongodb"]
in-mem = ["dep:typemap_rev"]
default = ["in-mem"]

[dependencies]
live-entity-derive = { version = "0.0.7", path = "live-entity-derive" }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.34.0", features = ["sync", "macros", "rt"] }
async-trait = { version = "0.1.73" }
futures-util = { version = "0.3.28" }
mongodb = { version = "2.6.1", optional = true }
typemap_rev = { version = "0.3.0", optional = true }

[dev-dependencies]
test-utils = { path = "test-utils" }