[package]
name = "fullstack-entity-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
mongo = []

[dependencies]
syn = { version = "2.0.37", features = ["full"] }
quote = { version = "1.0.33" }
proc-macro2 = { version = "1.0.67" }

[lib]
proc-macro = true
