[package]
name = "live-entity-derive"
description = "Derive macros for the live-entity library"
version = "0.0.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tradeJmark/live-entity"
repository = "https://github.com/tradeJmark/live-entity"
readme = "README.md"

[dependencies]
syn = { version = "2.0.37", features = ["full"] }
quote = { version = "1.0.33" }
proc-macro2 = { version = "1.0.67" }

[lib]
proc-macro = true
