[package]
name = "test-utils"
version = "0.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
live-entity = { version="0.0.7", path = ".." }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["sync", "rt"] }